--- a/output/.gitignore
+++ b/output/.gitignore
@@ -1,4 +1,5 @@
-#Ignore all files in this folder except .gitignore
+#Ignore all files in this folder except .gitignore and README.md
 *
 
 !.gitignore
+!README.md
