--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -11,8 +11,14 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v2
 
+            - name: Setup Perl
+              uses: shogo82148/actions-setup-perl@v1
+
             - name: Check Perl version
               run: perl --version
+
+            - name: Check WebInImblaze
+              run: perl wi.pl --version
 
             - name: Unit tests
               run: perl wi.t
