chore: move installation of LWP::Protocol::https to the correct workflow

--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -17,6 +17,9 @@ jobs:
                   install-modules-with: cpanm
                   install-modules-args: --with-develop --with-configure
 
+            - name: Install LWP::Protocol::https
+              run: cpanm LWP::Protocol::https
+
             - name: Install LWP
               run: cpanm LWP
 
