--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -17,9 +17,6 @@ jobs:
                   install-modules-with: cpanm
                   install-modules-args: --with-develop --with-configure
 
-            - name: Install LWP::Protocol::https
-              run: cpanm LWP::Protocol::https
-
             - name: Install LWP
               run: cpanm LWP
 
@@ -29,7 +26,7 @@ jobs:
             - name: Check Perl version
               run: perl --version
 
-            - name: Check WebInImblaze
+            - name: Check WebImblaze
               run: perl wi.pl --version
 
             - name: Unit tests
