chore: change severity of textlint terminolgy to warning

--- a/.github/linters/.textlintrc.json
+++ b/.github/linters/.textlintrc.json
@@ -3,6 +3,8 @@
         "comments": true
     },
     "rules": {
-        "terminology": false
+        "terminology": {
+            "severity": "warning"
+        }
     }
 }
