--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -2,3 +2,7 @@ severity = 1
 verbose  = %f:%l:%c [%s %p] %m near '%r'\n
 
 [-BuiltinFunctions::ProhibitStringyEval]
+[-CodeLayout::RequireTidyCode]
+[-InputOutput::ProhibitBacktickOperators]
+[-InputOutput::RequireCheckedSyscalls]
+[-ValuesAndExpressions::ProhibitMagicNumbers]
