chore: set PERLCRITIC env variable for config file location

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -24,7 +24,7 @@ jobs:
                   LINTER_RULES_PATH: /
                   MARKDOWN_CONFIG_FILE: ./.github/linters/.markdown-lint.yml
                   NATURAL_LANGUAGE_CONFIG_FILE: ./.github/linters/.textlintrc.json
-                  PERL_CONFIG_FILE: ./.github/linters/.perlcriticrc
+                  PERLCRITIC: ./.github/linters/.perlcriticrc
                   PYTHON_BLACK_CONFIG_FILE: ./.github/linters/.python-black
                   PYTHON_ISORT_CONFIG_FILE: ./.github/linters/.isort.cfg
                   VALIDATE_YAML: false
