chore: add some perlcritic exclusions

--- a/.github/linters/.perlcriticrc
+++ b/.github/linters/.perlcriticrc
@@ -3,6 +3,15 @@ verbose  = %f:%l:%c [%s %p] %m near '%r'\n
 
 [-BuiltinFunctions::ProhibitStringyEval]
 [-CodeLayout::RequireTidyCode]
+[-CodeLayout::ProhibitParensWithBuiltins]
+[-ControlStructures::ProhibitPostfixControls]
 [-InputOutput::ProhibitBacktickOperators]
 [-InputOutput::RequireCheckedSyscalls]
+[-RegularExpressions::RequireDotMatchAnything]
+[-RegularExpressions::RequireExtendedFormatting]
+[-RegularExpressions::RequireLineBoundaryMatching]
+[-TestingAndDebugging::ProhibitNoWarnings]
 [-ValuesAndExpressions::ProhibitMagicNumbers]
+[-ValuesAndExpressions::ProhibitVersionStrings]
+[-Variables::ProhibitPackageVars]
+[-Variables::ProhibitPunctuationVars]
