chore: move the m to before the split expression for vscode parsing

--- a/.github/linters/.perlcriticrc
+++ b/.github/linters/.perlcriticrc
@@ -7,10 +7,12 @@ verbose  = %f:%l:%c [%s %p] %m near '%r'\n
 [-ControlStructures::ProhibitPostfixControls]
 [-InputOutput::ProhibitBacktickOperators]
 [-InputOutput::RequireCheckedSyscalls]
+[-Objects::ProhibitIndirectSyntax]]
 [-RegularExpressions::RequireDotMatchAnything]
 [-RegularExpressions::RequireExtendedFormatting]
 [-RegularExpressions::RequireLineBoundaryMatching]
 [-TestingAndDebugging::ProhibitNoWarnings]
+[-TestingAndDebugging::RequireUseWarnings]
 [-ValuesAndExpressions::ProhibitMagicNumbers]
 [-ValuesAndExpressions::ProhibitVersionStrings]
 [-Variables::ProhibitPackageVars]
