chore: fix critics

--- a/.github/linters/.perlcriticrc
+++ b/.github/linters/.perlcriticrc
@@ -4,16 +4,22 @@ verbose  = %f:%l:%c [%s %p] %m near '%r'\n
 [-BuiltinFunctions::ProhibitStringyEval]
 [-CodeLayout::RequireTidyCode]
 [-CodeLayout::ProhibitParensWithBuiltins]
+[-ControlStructures::ProhibitDeepNests]
 [-ControlStructures::ProhibitPostfixControls]
+[-ErrorHandling::RequireCarping]
 [-InputOutput::ProhibitBacktickOperators]
 [-InputOutput::RequireCheckedSyscalls]
 [-Objects::ProhibitIndirectSyntax]]
+[-RegularExpressions::ProhibitComplexRegexes]
 [-RegularExpressions::RequireDotMatchAnything]
 [-RegularExpressions::RequireExtendedFormatting]
+[-RegularExpressions::ProhibitEnumeratedClasses]
+[-RegularExpressions::ProhibitSingleCharAlternation]
 [-RegularExpressions::RequireLineBoundaryMatching]
 [-TestingAndDebugging::ProhibitNoWarnings]
 [-TestingAndDebugging::RequireUseWarnings]
 [-ValuesAndExpressions::ProhibitMagicNumbers]
 [-ValuesAndExpressions::ProhibitVersionStrings]
+[-Variables::ProhibitMatchVars]
 [-Variables::ProhibitPackageVars]
 [-Variables::ProhibitPunctuationVars]
