--- a/.github/linters/.perlcriticrc
+++ b/.github/linters/.perlcriticrc
@@ -9,7 +9,8 @@ verbose  = %f:%l:%c [%s %p] %m near '%r'\n
 [-ErrorHandling::RequireCarping]
 [-InputOutput::ProhibitBacktickOperators]
 [-InputOutput::RequireCheckedSyscalls]
-[-Objects::ProhibitIndirectSyntax]]
+[-Modules::RequireExplicitPackage]
+[-Objects::ProhibitIndirectSyntax]
 [-RegularExpressions::ProhibitComplexRegexes]
 [-RegularExpressions::RequireDotMatchAnything]
 [-RegularExpressions::RequireExtendedFormatting]
