chore: address some linting issues

--- a/.github/linters/.perlcriticrc
+++ b/.github/linters/.perlcriticrc
@@ -4,6 +4,8 @@ verbose  = %f:%l:%c [%s %p] %m near '%r'\n
 [-BuiltinFunctions::ProhibitStringyEval]
 [-CodeLayout::RequireTidyCode]
 [-CodeLayout::ProhibitParensWithBuiltins]
+[-Community::DiscouragedModules]
+[-Community::EmptyReturn]
 [-ControlStructures::ProhibitDeepNests]
 [-ControlStructures::ProhibitPostfixControls]
 [-ErrorHandling::RequireCarping]
