--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -14,6 +14,12 @@ jobs:
             - name: Check GITHUB_WORKSPACE var
               run: echo "$GITHUB_WORKSPACE"
 
+            - name: Check the current working directory
+              run: pwd && ls -asl
+
+            - name: Put .perlcriticrc in the home folder
+              run: cp ./.perlcriticrc $HOME
+
             - name: Lint Code Base
               uses: github/super-linter@v4
               env:
