--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -1,11 +1,11 @@
 ---
-name: Lint Code Base
+name: Mega Lint Code Base
 
 on: push
 
 jobs:
     super-lint:
-        name: Lint Code Base
+        name: Mega Lint Code Base
         runs-on: ubuntu-latest
         steps:
             - name: Checkout code
@@ -20,8 +20,8 @@ jobs:
             - name: Put .perlcriticrc in the home folder
               run: cp ./.perlcriticrc $HOME
 
-            - name: Lint Code Base
-              uses: github/super-linter@v4
+            - name: Mega Lint Code Base
+              uses: megalinter/megalinter@v5
               env:
                   CSS_FILE_NAME: ./.github/linters/.stylelintrc.json
                   DEFAULT_BRANCH: main
@@ -30,7 +30,7 @@ jobs:
                   LINTER_RULES_PATH: /
                   MARKDOWN_CONFIG_FILE: ./.github/linters/.markdown-lint.yml
                   NATURAL_LANGUAGE_CONFIG_FILE: ./.github/linters/.textlintrc.json
-                  PERL_PERLCRITIC_OPTIONS: '--profile ./.github/linters/.perlcriticrc'
+                  PERL_PERLCRITIC: './.github/linters/.perlcriticrc'
                   PYTHON_BLACK_CONFIG_FILE: ./.github/linters/.python-black
                   PYTHON_ISORT_CONFIG_FILE: ./.github/linters/.isort.cfg
                   VALIDATE_YAML: false
