--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -20,6 +20,9 @@ jobs:
             - name: Put .perlcriticrc in the home folder
               run: cp .github/linters/.perlcriticrc "$HOME"
 
+            - name: Put .perlcriticrc in the project root folder
+              run: cp .github/linters/.perlcriticrc ./
+
             - name: Lint Code Base
               uses: github/super-linter@v4
               env:
