--- a/.github/linters/.perlcriticrc
+++ b/.github/linters/.perlcriticrc
@@ -1,3 +1,6 @@
+severity = 1
+verbose = %f:%l:%c [%s %p] %m near '%r'\n
+
 [-BuiltinFunctions::ProhibitStringyEval]
 [-CodeLayout::RequireTidyCode]
 [-CodeLayout::ProhibitParensWithBuiltins]
