--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -33,6 +33,8 @@ jobs:
                   LINTER_RULES_PATH: /
                   MARKDOWN_CONFIG_FILE: ./.github/linters/.markdown-lint.yml
                   NATURAL_LANGUAGE_CONFIG_FILE: ./.github/linters/.textlintrc.json
+                  PERL_PERLCRITIC: ./.github/linters/.perlcriticrc
+                  PERLCRITIC: ./.github/linters/.perlcriticrc
                   PERL_PERLCRITIC_OPTIONS: '--profile ./.github/linters/.perlcriticrc'
                   PYTHON_BLACK_CONFIG_FILE: ./.github/linters/.python-black
                   PYTHON_ISORT_CONFIG_FILE: ./.github/linters/.isort.cfg
